# python-project-52

./: .gitignore  Makefile  README.md  manage.py  pyproject.toml
.github/workflows/: pyci.yml
hexlet_task_manager/: asgi.py  settings.py  urls.py
labels/: forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_alter_label_creation_date.py
locale/en_us/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
statuses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_name.py  0003_alter_status_name.py  0004_alter_status_creation_date.py
task_manager/: admin.py  asgi.py  forms.py  mixins.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
task_manager/fixtures/: labels.json  save_all.json  statuses.json  tasks.json  users.json
task_manager/labels/: admin.py  forms.py  tests.py  urls.py  views.py
task_manager/statuses/: tests.py  urls.py  views.py
task_manager/tasks/: filter.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0002_initial.py  0005_alter_task_labels.py  (+3 more)
task_manager/templates/: base.html  form.html  index.html  login.html  users.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
tasks/: admin.py  filter.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_author_alter_task_description_and_more.py  0003_remove_task_tag_task_label.py  0003_remove_task_user_task_executor.py  0004_alter_task_label.py  0005_alter_task_label.py  0006_alter_task_creation_date.py  0007_alter_task_label.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+18 files in other folders)
